clusters/personal/envoy-gateway/test-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-test-gateway
  namespace: kube-system
spec:
  infrastructure:
    labels:
      type: public
    annotations:
      io.cilium/lb-ipam-ips: "185.242.182.150"
  gatewayClassName: envoy
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: 'egtest.cappyt.sh'
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 443
    hostname: 'egtest.cappyt.sh'
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
        - name: wildcard-cappyt-sh-cert
          kind: Secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-test-whoami
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy-test-whoami
  template:
    metadata:
      labels:
        app: envoy-test-whoami
    spec:
      containers:
      - name: whoami
        image: traefik/whoami:v1.10.3
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-test-whoami
  namespace: kube-system
spec:
  selector:
    app: envoy-test-whoami
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-test-route
  namespace: kube-system
spec:
  hostnames:
    - egtest.cappyt.sh
  parentRefs:
  - name: envoy-test-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - name: envoy-test-whoami
      port: 80
